<resources>
    <string name="app_name">Scanify</string>
    <string name="Scan">Scan</string>
    <string name="welcome">Welcome to Scanify!</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="camera">Scan Now!</string>
    <string name="scancode">scanCode</string>
    <string name="reset">Reset</string>
    <string name="history">History</string>
    <string name="scan">Scan</string>

    <!-- Identifiers -->
    <string name="com_auth0_scheme">app</string>

    <!-- Settings -->
    <string name="login_scopes">openid profile email read:current_user update:current_user_metadata</string>
    <string name="login_audience">https://%1$s/api/v2/</string>

    <!--
    Main activity
    =============
    -->

    <!-- Title -->
    <string name="initial_title">Welcome to Scanify</string>
    <string name="logged_in_title">You\'re logged in.</string>
    <string name="logged_out_title">You\'re logged out.</string>

    <!-- "Log in" and "Log out" buttons -->
    <string name="btnLogin">Log in</string>
    <string name="btnLogout">Log out</string>

    <!-- User profile -->
    <string name="user_profile">
        Welcome %1$s\n
        Email: %2$s
    </string>

    <!-- Metadata -->
    <string name="textview_metadata_heading">Metadata</string>
    <string name="textview_metadata_info">Use the text box and buttons below to get and set the \'country\' field in the user\'s metadata.</string>

    <!-- "Get" and "Set" buttons -->
    <string name="button_get">Get</string>
    <string name="button_set">Set</string>

    <!-- SnackBar messages-->
    <string name="login_success_message">Successfully logged in!</string>
    <string name="login_failure_message">Failed to log in.</string>
    <string name="general_failure_with_exception_code">Failed - exception code: %1$s</string>
    <string name="general_success_message">Success!</string>
    <string name="logo">logo</string>

</resources>